[ + ] Added some functions for fundamental engine interface IDGLE_Base to give more flexibility to extend interfaces via extra commands.
[ + ] Methods ResolutionCorrectToAbsolute and AbsoluteToResolutionCorrect of interface IRender2D. These methods will help to obtain correct coordinates when resolution correction is turned on.
[ + ] Methods ProjectScreenToCamera and UnprojectCameraToScreen of interface IRender2D. These methods will help to obtain correct coordinates when 2D camera is set.
[ + ] Added IEvGoFullScreen event to hook engine fullscreen switch and GetDesktopResolution method to get current desktop resolution.
[ + ] For IMesh added methods to recalculate normals, bounds and tangent space. Also added method to optimize mesh geometry and transform geometry by matrix.
[ + ] Console utility to run engine from command line.
[ + ] GetLastUpdateDeltaTime and GetElapsedTime IEngineCore methods.
[ * ] Now engine differs left and right Ctrl, Alt and Shift. Also Alt-Enter combination work much better.
[ * ] Renamed DrawSprite* methods of IRender2D interface.
[ * ] IModel interface was reengineered.
[ * ] Improved DMD format to version 3.1, back compatibility was dropped.
[ * ] Improved 3ds Max export script.
[ - ] Some old stuff (like plugins for browsers) was dropped off.
[ - ] No editors and almost no 3D in this version also no third-party plugins. Functionallity will start to return in nearest next releases.
[ - ] ICF_BLOCK_WINKEYS flag from method Configure of IInput interface.
[ - ] Draw2DRect method of IBitmapFont cause it is high level method of some higher abstraction level not low level.

And really much much more!

===============================================================================

You can find all previously made changes before engine total rebirth on GitHub in the document "docs/PreGitHubChangeLog.txt".

===============================================================================